// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tsc > arktype 1`] = `
"// arktype.d.ts
declare const test: any;
export { test };
"
`;

exports[`tsc > compiler project sourcemap (build: false) 2`] = `
"// index.d.ts
declare const a = 1;
export { a };
//# sourceMappingURL=index.d.ts.map

// index.d.ts.map
{"version":3,"file":"index.d.ts","sources":["../src/index.ts"],"names":[],"mappings":"cAAaA,CAAC;"}
// index.js
const a = 1;

export { a };
//# sourceMappingURL=index.js.map

// index.js.map
{"version":3,"file":"index.js","sources":[],"sourcesContent":[],"names":[],"mappings":";;;;"}"
`;

exports[`tsc > compiler project sourcemap (build: true) 2`] = `
"// index.d.ts
declare const a = 1;
export { a };
//# sourceMappingURL=index.d.ts.map

// index.d.ts.map
{"version":3,"file":"index.d.ts","sources":["../src/index.d.ts"],"names":[],"mappings":"cAAqBA,CAAC;"}
// index.js
const a = 1;

export { a };
//# sourceMappingURL=index.js.map

// index.js.map
{"version":3,"file":"index.js","sources":[],"sourcesContent":[],"names":[],"mappings":";;;;"}"
`;

exports[`tsc > composite references 1`] = `
"// input1.d.ts
declare const input1 = "input1";
export { input1 };

// input1.js
const input1 = "input1";

export { input1 };

// input2.d.ts
declare const input2 = "input2";
export { input2 };

// input2.js
const input2 = "input2";

export { input2 };
"
`;

exports[`tsc > composite references incremental 1`] = `
"// input1.d.ts
declare const input1 = "input1";
export { input1 };

// input1.js
const input1 = "input1";

export { input1 };

// input2.d.ts
declare const input2 = "input2";
export { input2 };

// input2.js
const input2 = "input2";

export { input2 };
"
`;

exports[`tsc > import JSON 1`] = `
"// index.d.ts
declare const _exports: string[];
declare let name: string;
declare let age: number;
declare namespace __json_default_export {
  export { name, age };
}
export { age, _exports as bar, bar_json_d as barNs, foo_json_d as fooNs, name };
"
`;

exports[`tsc > jsdoc 1`] = `
"// jsdoc.d.ts
import { Plugin } from 'rollup';
interface RollupMdiFontminOptions extends Plugin {}
declare function fn(): number;
interface Options {
  foo: string;
}
type Foo = string;
declare const _default: number;
export { Foo, Options, RollupMdiFontminOptions, _default as default, fn };

// jsdoc.js
/**
* named export
*/
function fn() {
	return 42;
}
/**
* default export
*/
var jsdoc = fn();

export { jsdoc as default, fn };
"
`;

exports[`tsc > multi declarations 1`] = `
"// index.d.ts
declare const a$1: 1, b$1: 2;
declare const a = 3;
declare const b = 3;
export { a$1 as a, b$1 as b, a as c, b as d };
"
`;

exports[`tsc > references 1`] = `
"// index.d.ts
declare const a = 1;
export { a };

// index.js
const a = 1;

export { a };
"
`;

exports[`tsc > rename infer 1`] = `
"// infer-renaming.d.ts
import { infer } from 'zod';
declare const productSchema: any;
declare const product: infer<typeof productSchema>;
export { product, productSchema };
"
`;

exports[`tsc > resolve paths > resolver: oxc 1`] = `
"// index.d.ts
declare const foo = 42;
export { foo };
"
`;

exports[`tsc > resolve paths > resolver: tsc 1`] = `
"// index.d.ts
declare const foo = 42;
export { foo };
"
`;

exports[`tsc > ts-macro w/ ts-compiler 1`] = `
"// main.d.ts
declare function defineStyle(style: string): string;
export { defineStyle as default };
"
`;

exports[`tsc > typescript compiler 1`] = `
"// entry1.d.ts
declare const str = "foo";
declare const num = 42;
declare const bool = true;
declare function fn(argument: typeof str): "foo" | 1;
export { bool, fn, num, str };

// entry2.d.ts
interface Unused {
  foo: string;
}
export { Unused };
"
`;

exports[`tsc > vue-sfc w/ ts-compiler 1`] = `
"// main.d.ts
import * as vue from 'vue';
type __VLS_Props = {
  foo: string;
};
declare global {
  interface Window {
    foo: string;
  }
}
declare const __VLS_export: vue.DefineComponent<__VLS_Props, {}, {}, {}, {}, vue.ComponentOptionsMixin, vue.ComponentOptionsMixin, {}, string, vue.PublicProps, Readonly<__VLS_Props> & Readonly<{}>, {}, {}, {}, {}, string, vue.ComponentProvideOptions, false, {}, any>;
declare const _default: typeof __VLS_export;
export { _default as App };
"
`;

exports[`tsc > vue-sfc w/ ts-compiler w/ vueCompilerOptions in tsconfig 1`] = `
"// main.d.ts
import * as vue from 'vue';
declare const __VLS_export: vue.DefineComponent<{
  foo: string;
  bar?: string | undefined;
  innerHTML?: string | undefined;
  class?: vue.ClassValue;
  style?: vue.StyleValue;
  accesskey?: string | undefined;
  contenteditable?: (boolean | "true" | "false") | "inherit" | "plaintext-only" | undefined;
  contextmenu?: string | undefined;
  dir?: string | undefined;
  draggable?: (boolean | "true" | "false") | undefined;
  enterkeyhint?: "enter" | "done" | "go" | "next" | "previous" | "search" | "send" | undefined;
  enterKeyHint?: vue.HTMLAttributes["enterkeyhint"];
  hidden?: (boolean | "true" | "false") | "" | "hidden" | "until-found" | undefined;
  id?: string | undefined;
  inert?: (boolean | "true" | "false") | undefined;
  lang?: string | undefined;
  placeholder?: string | undefined;
  spellcheck?: (boolean | "true" | "false") | undefined;
  tabindex?: (string | number) | undefined;
  title?: string | undefined;
  translate?: "yes" | "no" | undefined;
  radiogroup?: string | undefined;
  role?: string | undefined;
  about?: string | undefined;
  datatype?: string | undefined;
  inlist?: any;
  prefix?: string | undefined;
  property?: string | undefined;
  resource?: string | undefined;
  typeof?: string | undefined;
  vocab?: string | undefined;
  autocapitalize?: string | undefined;
  autocorrect?: string | undefined;
  autosave?: string | undefined;
  color?: string | undefined;
  itemprop?: string | undefined;
  itemscope?: (boolean | "true" | "false") | undefined;
  itemtype?: string | undefined;
  itemid?: string | undefined;
  itemref?: string | undefined;
  results?: (string | number) | undefined;
  security?: string | undefined;
  unselectable?: "on" | "off" | undefined;
  inputmode?: "none" | "text" | "tel" | "url" | "email" | "numeric" | "decimal" | "search" | undefined;
  is?: string | undefined;
  exportparts?: string;
  part?: string;
  'aria-activedescendant'?: string | undefined;
  'aria-atomic'?: (boolean | "true" | "false") | undefined;
  'aria-autocomplete'?: "none" | "inline" | "list" | "both" | undefined;
  'aria-busy'?: (boolean | "true" | "false") | undefined;
  'aria-checked'?: (boolean | "true" | "false") | "mixed" | undefined;
  'aria-colcount'?: (string | number) | undefined;
  'aria-colindex'?: (string | number) | undefined;
  'aria-colspan'?: (string | number) | undefined;
  'aria-controls'?: string | undefined;
  'aria-current'?: (boolean | "true" | "false") | "page" | "step" | "location" | "date" | "time" | undefined;
  'aria-describedby'?: string | undefined;
  'aria-details'?: string | undefined;
  'aria-disabled'?: (boolean | "true" | "false") | undefined;
  'aria-dropeffect'?: "none" | "copy" | "execute" | "link" | "move" | "popup" | undefined;
  'aria-errormessage'?: string | undefined;
  'aria-expanded'?: (boolean | "true" | "false") | undefined;
  'aria-flowto'?: string | undefined;
  'aria-grabbed'?: (boolean | "true" | "false") | undefined;
  'aria-haspopup'?: (boolean | "true" | "false") | "menu" | "listbox" | "tree" | "grid" | "dialog" | undefined;
  'aria-hidden'?: (boolean | "true" | "false") | undefined;
  'aria-invalid'?: (boolean | "true" | "false") | "grammar" | "spelling" | undefined;
  'aria-keyshortcuts'?: string | undefined;
  'aria-label'?: string | undefined;
  'aria-labelledby'?: string | undefined;
  'aria-level'?: (string | number) | undefined;
  'aria-live'?: "off" | "assertive" | "polite" | undefined;
  'aria-modal'?: (boolean | "true" | "false") | undefined;
  'aria-multiline'?: (boolean | "true" | "false") | undefined;
  'aria-multiselectable'?: (boolean | "true" | "false") | undefined;
  'aria-orientation'?: "horizontal" | "vertical" | undefined;
  'aria-owns'?: string | undefined;
  'aria-placeholder'?: string | undefined;
  'aria-posinset'?: (string | number) | undefined;
  'aria-pressed'?: (boolean | "true" | "false") | "mixed" | undefined;
  'aria-readonly'?: (boolean | "true" | "false") | undefined;
  'aria-relevant'?: "additions" | "additions removals" | "additions text" | "all" | "removals" | "removals additions" | "removals text" | "text" | "text additions" | "text removals" | undefined;
  'aria-required'?: (boolean | "true" | "false") | undefined;
  'aria-roledescription'?: string | undefined;
  'aria-rowcount'?: (string | number) | undefined;
  'aria-rowindex'?: (string | number) | undefined;
  'aria-rowspan'?: (string | number) | undefined;
  'aria-selected'?: (boolean | "true" | "false") | undefined;
  'aria-setsize'?: (string | number) | undefined;
  'aria-sort'?: "none" | "ascending" | "descending" | "other" | undefined;
  'aria-valuemax'?: (string | number) | undefined;
  'aria-valuemin'?: (string | number) | undefined;
  'aria-valuenow'?: (string | number) | undefined;
  'aria-valuetext'?: string | undefined;
  onCopy?: ((payload: ClipboardEvent) => void) | undefined;
  onCut?: ((payload: ClipboardEvent) => void) | undefined;
  onPaste?: ((payload: ClipboardEvent) => void) | undefined;
  onCompositionend?: ((payload: CompositionEvent) => void) | undefined;
  onCompositionstart?: ((payload: CompositionEvent) => void) | undefined;
  onCompositionupdate?: ((payload: CompositionEvent) => void) | undefined;
  onDrag?: ((payload: DragEvent) => void) | undefined;
  onDragend?: ((payload: DragEvent) => void) | undefined;
  onDragenter?: ((payload: DragEvent) => void) | undefined;
  onDragexit?: ((payload: DragEvent) => void) | undefined;
  onDragleave?: ((payload: DragEvent) => void) | undefined;
  onDragover?: ((payload: DragEvent) => void) | undefined;
  onDragstart?: ((payload: DragEvent) => void) | undefined;
  onDrop?: ((payload: DragEvent) => void) | undefined;
  onFocus?: ((payload: FocusEvent) => void) | undefined;
  onFocusin?: ((payload: FocusEvent) => void) | undefined;
  onFocusout?: ((payload: FocusEvent) => void) | undefined;
  onBlur?: ((payload: FocusEvent) => void) | undefined;
  onChange?: ((payload: Event) => void) | undefined;
  onBeforeinput?: ((payload: InputEvent) => void) | undefined;
  onFormdata?: ((payload: FormDataEvent) => void) | undefined;
  onInput?: ((payload: InputEvent) => void) | undefined;
  onReset?: ((payload: Event) => void) | undefined;
  onSubmit?: ((payload: SubmitEvent) => void) | undefined;
  onInvalid?: ((payload: Event) => void) | undefined;
  onFullscreenchange?: ((payload: Event) => void) | undefined;
  onFullscreenerror?: ((payload: Event) => void) | undefined;
  onLoad?: ((payload: Event) => void) | undefined;
  onError?: ((payload: Event) => void) | undefined;
  onKeydown?: ((payload: KeyboardEvent) => void) | undefined;
  onKeypress?: ((payload: KeyboardEvent) => void) | undefined;
  onKeyup?: ((payload: KeyboardEvent) => void) | undefined;
  onDblclick?: ((payload: MouseEvent) => void) | undefined;
  onMousedown?: ((payload: MouseEvent) => void) | undefined;
  onMouseenter?: ((payload: MouseEvent) => void) | undefined;
  onMouseleave?: ((payload: MouseEvent) => void) | undefined;
  onMousemove?: ((payload: MouseEvent) => void) | undefined;
  onMouseout?: ((payload: MouseEvent) => void) | undefined;
  onMouseover?: ((payload: MouseEvent) => void) | undefined;
  onMouseup?: ((payload: MouseEvent) => void) | undefined;
  onAbort?: ((payload: UIEvent) => void) | undefined;
  onCanplay?: ((payload: Event) => void) | undefined;
  onCanplaythrough?: ((payload: Event) => void) | undefined;
  onDurationchange?: ((payload: Event) => void) | undefined;
  onEmptied?: ((payload: Event) => void) | undefined;
  onEncrypted?: ((payload: MediaEncryptedEvent) => void) | undefined;
  onEnded?: ((payload: Event) => void) | undefined;
  onLoadeddata?: ((payload: Event) => void) | undefined;
  onLoadedmetadata?: ((payload: Event) => void) | undefined;
  onLoadstart?: ((payload: Event) => void) | undefined;
  onPause?: ((payload: Event) => void) | undefined;
  onPlay?: ((payload: Event) => void) | undefined;
  onPlaying?: ((payload: Event) => void) | undefined;
  onProgress?: ((payload: ProgressEvent<EventTarget>) => void) | undefined;
  onRatechange?: ((payload: Event) => void) | undefined;
  onSeeked?: ((payload: Event) => void) | undefined;
  onSeeking?: ((payload: Event) => void) | undefined;
  onStalled?: ((payload: Event) => void) | undefined;
  onSuspend?: ((payload: Event) => void) | undefined;
  onTimeupdate?: ((payload: Event) => void) | undefined;
  onVolumechange?: ((payload: Event) => void) | undefined;
  onWaiting?: ((payload: Event) => void) | undefined;
  onSelect?: ((payload: Event) => void) | undefined;
  onScroll?: ((payload: Event) => void) | undefined;
  onScrollend?: ((payload: Event) => void) | undefined;
  onTouchcancel?: ((payload: TouchEvent) => void) | undefined;
  onTouchend?: ((payload: TouchEvent) => void) | undefined;
  onTouchmove?: ((payload: TouchEvent) => void) | undefined;
  onTouchstart?: ((payload: TouchEvent) => void) | undefined;
  onAuxclick?: ((payload: PointerEvent) => void) | undefined;
  onClick?: ((payload: PointerEvent) => void) | undefined;
  onContextmenu?: ((payload: PointerEvent) => void) | undefined;
  onGotpointercapture?: ((payload: PointerEvent) => void) | undefined;
  onLostpointercapture?: ((payload: PointerEvent) => void) | undefined;
  onPointerdown?: ((payload: PointerEvent) => void) | undefined;
  onPointermove?: ((payload: PointerEvent) => void) | undefined;
  onPointerup?: ((payload: PointerEvent) => void) | undefined;
  onPointercancel?: ((payload: PointerEvent) => void) | undefined;
  onPointerenter?: ((payload: PointerEvent) => void) | undefined;
  onPointerleave?: ((payload: PointerEvent) => void) | undefined;
  onPointerover?: ((payload: PointerEvent) => void) | undefined;
  onPointerout?: ((payload: PointerEvent) => void) | undefined;
  onBeforetoggle?: ((payload: ToggleEvent) => void) | undefined;
  onToggle?: ((payload: ToggleEvent) => void) | undefined;
  onWheel?: ((payload: WheelEvent) => void) | undefined;
  onAnimationcancel?: ((payload: AnimationEvent) => void) | undefined;
  onAnimationstart?: ((payload: AnimationEvent) => void) | undefined;
  onAnimationend?: ((payload: AnimationEvent) => void) | undefined;
  onAnimationiteration?: ((payload: AnimationEvent) => void) | undefined;
  onSecuritypolicyviolation?: ((payload: SecurityPolicyViolationEvent) => void) | undefined;
  onTransitioncancel?: ((payload: TransitionEvent) => void) | undefined;
  onTransitionend?: ((payload: TransitionEvent) => void) | undefined;
  onTransitionrun?: ((payload: TransitionEvent) => void) | undefined;
  onTransitionstart?: ((payload: TransitionEvent) => void) | undefined;
  key?: PropertyKey | undefined;
  ref?: vue.VNodeRef | undefined;
  ref_for?: boolean | undefined | undefined;
  ref_key?: string | undefined | undefined;
  onVnodeBeforeMount?: (((vnode: vue.VNode) => void) | ((vnode: vue.VNode) => void)[]) | undefined;
  onVnodeMounted?: (((vnode: vue.VNode) => void) | ((vnode: vue.VNode) => void)[]) | undefined;
  onVnodeBeforeUpdate?: (((vnode: vue.VNode, oldVNode: vue.VNode) => void) | ((vnode: vue.VNode, oldVNode: vue.VNode) => void)[]) | undefined;
  onVnodeUpdated?: (((vnode: vue.VNode, oldVNode: vue.VNode) => void) | ((vnode: vue.VNode, oldVNode: vue.VNode) => void)[]) | undefined;
  onVnodeBeforeUnmount?: (((vnode: vue.VNode) => void) | ((vnode: vue.VNode) => void)[]) | undefined;
  onVnodeUnmounted?: (((vnode: vue.VNode) => void) | ((vnode: vue.VNode) => void)[]) | undefined;
}, {}, {}, {}, {}, vue.ComponentOptionsMixin, vue.ComponentOptionsMixin, {}, string, vue.PublicProps, Readonly<{
  foo: string;
  bar?: string | undefined;
  innerHTML?: string | undefined;
  class?: vue.ClassValue;
  style?: vue.StyleValue;
  accesskey?: string | undefined;
  contenteditable?: (boolean | "true" | "false") | "inherit" | "plaintext-only" | undefined;
  contextmenu?: string | undefined;
  dir?: string | undefined;
  draggable?: (boolean | "true" | "false") | undefined;
  enterkeyhint?: "enter" | "done" | "go" | "next" | "previous" | "search" | "send" | undefined;
  enterKeyHint?: vue.HTMLAttributes["enterkeyhint"];
  hidden?: (boolean | "true" | "false") | "" | "hidden" | "until-found" | undefined;
  id?: string | undefined;
  inert?: (boolean | "true" | "false") | undefined;
  lang?: string | undefined;
  placeholder?: string | undefined;
  spellcheck?: (boolean | "true" | "false") | undefined;
  tabindex?: (string | number) | undefined;
  title?: string | undefined;
  translate?: "yes" | "no" | undefined;
  radiogroup?: string | undefined;
  role?: string | undefined;
  about?: string | undefined;
  datatype?: string | undefined;
  inlist?: any;
  prefix?: string | undefined;
  property?: string | undefined;
  resource?: string | undefined;
  typeof?: string | undefined;
  vocab?: string | undefined;
  autocapitalize?: string | undefined;
  autocorrect?: string | undefined;
  autosave?: string | undefined;
  color?: string | undefined;
  itemprop?: string | undefined;
  itemscope?: (boolean | "true" | "false") | undefined;
  itemtype?: string | undefined;
  itemid?: string | undefined;
  itemref?: string | undefined;
  results?: (string | number) | undefined;
  security?: string | undefined;
  unselectable?: "on" | "off" | undefined;
  inputmode?: "none" | "text" | "tel" | "url" | "email" | "numeric" | "decimal" | "search" | undefined;
  is?: string | undefined;
  exportparts?: string;
  part?: string;
  'aria-activedescendant'?: string | undefined;
  'aria-atomic'?: (boolean | "true" | "false") | undefined;
  'aria-autocomplete'?: "none" | "inline" | "list" | "both" | undefined;
  'aria-busy'?: (boolean | "true" | "false") | undefined;
  'aria-checked'?: (boolean | "true" | "false") | "mixed" | undefined;
  'aria-colcount'?: (string | number) | undefined;
  'aria-colindex'?: (string | number) | undefined;
  'aria-colspan'?: (string | number) | undefined;
  'aria-controls'?: string | undefined;
  'aria-current'?: (boolean | "true" | "false") | "page" | "step" | "location" | "date" | "time" | undefined;
  'aria-describedby'?: string | undefined;
  'aria-details'?: string | undefined;
  'aria-disabled'?: (boolean | "true" | "false") | undefined;
  'aria-dropeffect'?: "none" | "copy" | "execute" | "link" | "move" | "popup" | undefined;
  'aria-errormessage'?: string | undefined;
  'aria-expanded'?: (boolean | "true" | "false") | undefined;
  'aria-flowto'?: string | undefined;
  'aria-grabbed'?: (boolean | "true" | "false") | undefined;
  'aria-haspopup'?: (boolean | "true" | "false") | "menu" | "listbox" | "tree" | "grid" | "dialog" | undefined;
  'aria-hidden'?: (boolean | "true" | "false") | undefined;
  'aria-invalid'?: (boolean | "true" | "false") | "grammar" | "spelling" | undefined;
  'aria-keyshortcuts'?: string | undefined;
  'aria-label'?: string | undefined;
  'aria-labelledby'?: string | undefined;
  'aria-level'?: (string | number) | undefined;
  'aria-live'?: "off" | "assertive" | "polite" | undefined;
  'aria-modal'?: (boolean | "true" | "false") | undefined;
  'aria-multiline'?: (boolean | "true" | "false") | undefined;
  'aria-multiselectable'?: (boolean | "true" | "false") | undefined;
  'aria-orientation'?: "horizontal" | "vertical" | undefined;
  'aria-owns'?: string | undefined;
  'aria-placeholder'?: string | undefined;
  'aria-posinset'?: (string | number) | undefined;
  'aria-pressed'?: (boolean | "true" | "false") | "mixed" | undefined;
  'aria-readonly'?: (boolean | "true" | "false") | undefined;
  'aria-relevant'?: "additions" | "additions removals" | "additions text" | "all" | "removals" | "removals additions" | "removals text" | "text" | "text additions" | "text removals" | undefined;
  'aria-required'?: (boolean | "true" | "false") | undefined;
  'aria-roledescription'?: string | undefined;
  'aria-rowcount'?: (string | number) | undefined;
  'aria-rowindex'?: (string | number) | undefined;
  'aria-rowspan'?: (string | number) | undefined;
  'aria-selected'?: (boolean | "true" | "false") | undefined;
  'aria-setsize'?: (string | number) | undefined;
  'aria-sort'?: "none" | "ascending" | "descending" | "other" | undefined;
  'aria-valuemax'?: (string | number) | undefined;
  'aria-valuemin'?: (string | number) | undefined;
  'aria-valuenow'?: (string | number) | undefined;
  'aria-valuetext'?: string | undefined;
  onCopy?: ((payload: ClipboardEvent) => void) | undefined;
  onCut?: ((payload: ClipboardEvent) => void) | undefined;
  onPaste?: ((payload: ClipboardEvent) => void) | undefined;
  onCompositionend?: ((payload: CompositionEvent) => void) | undefined;
  onCompositionstart?: ((payload: CompositionEvent) => void) | undefined;
  onCompositionupdate?: ((payload: CompositionEvent) => void) | undefined;
  onDrag?: ((payload: DragEvent) => void) | undefined;
  onDragend?: ((payload: DragEvent) => void) | undefined;
  onDragenter?: ((payload: DragEvent) => void) | undefined;
  onDragexit?: ((payload: DragEvent) => void) | undefined;
  onDragleave?: ((payload: DragEvent) => void) | undefined;
  onDragover?: ((payload: DragEvent) => void) | undefined;
  onDragstart?: ((payload: DragEvent) => void) | undefined;
  onDrop?: ((payload: DragEvent) => void) | undefined;
  onFocus?: ((payload: FocusEvent) => void) | undefined;
  onFocusin?: ((payload: FocusEvent) => void) | undefined;
  onFocusout?: ((payload: FocusEvent) => void) | undefined;
  onBlur?: ((payload: FocusEvent) => void) | undefined;
  onChange?: ((payload: Event) => void) | undefined;
  onBeforeinput?: ((payload: InputEvent) => void) | undefined;
  onFormdata?: ((payload: FormDataEvent) => void) | undefined;
  onInput?: ((payload: InputEvent) => void) | undefined;
  onReset?: ((payload: Event) => void) | undefined;
  onSubmit?: ((payload: SubmitEvent) => void) | undefined;
  onInvalid?: ((payload: Event) => void) | undefined;
  onFullscreenchange?: ((payload: Event) => void) | undefined;
  onFullscreenerror?: ((payload: Event) => void) | undefined;
  onLoad?: ((payload: Event) => void) | undefined;
  onError?: ((payload: Event) => void) | undefined;
  onKeydown?: ((payload: KeyboardEvent) => void) | undefined;
  onKeypress?: ((payload: KeyboardEvent) => void) | undefined;
  onKeyup?: ((payload: KeyboardEvent) => void) | undefined;
  onDblclick?: ((payload: MouseEvent) => void) | undefined;
  onMousedown?: ((payload: MouseEvent) => void) | undefined;
  onMouseenter?: ((payload: MouseEvent) => void) | undefined;
  onMouseleave?: ((payload: MouseEvent) => void) | undefined;
  onMousemove?: ((payload: MouseEvent) => void) | undefined;
  onMouseout?: ((payload: MouseEvent) => void) | undefined;
  onMouseover?: ((payload: MouseEvent) => void) | undefined;
  onMouseup?: ((payload: MouseEvent) => void) | undefined;
  onAbort?: ((payload: UIEvent) => void) | undefined;
  onCanplay?: ((payload: Event) => void) | undefined;
  onCanplaythrough?: ((payload: Event) => void) | undefined;
  onDurationchange?: ((payload: Event) => void) | undefined;
  onEmptied?: ((payload: Event) => void) | undefined;
  onEncrypted?: ((payload: MediaEncryptedEvent) => void) | undefined;
  onEnded?: ((payload: Event) => void) | undefined;
  onLoadeddata?: ((payload: Event) => void) | undefined;
  onLoadedmetadata?: ((payload: Event) => void) | undefined;
  onLoadstart?: ((payload: Event) => void) | undefined;
  onPause?: ((payload: Event) => void) | undefined;
  onPlay?: ((payload: Event) => void) | undefined;
  onPlaying?: ((payload: Event) => void) | undefined;
  onProgress?: ((payload: ProgressEvent<EventTarget>) => void) | undefined;
  onRatechange?: ((payload: Event) => void) | undefined;
  onSeeked?: ((payload: Event) => void) | undefined;
  onSeeking?: ((payload: Event) => void) | undefined;
  onStalled?: ((payload: Event) => void) | undefined;
  onSuspend?: ((payload: Event) => void) | undefined;
  onTimeupdate?: ((payload: Event) => void) | undefined;
  onVolumechange?: ((payload: Event) => void) | undefined;
  onWaiting?: ((payload: Event) => void) | undefined;
  onSelect?: ((payload: Event) => void) | undefined;
  onScroll?: ((payload: Event) => void) | undefined;
  onScrollend?: ((payload: Event) => void) | undefined;
  onTouchcancel?: ((payload: TouchEvent) => void) | undefined;
  onTouchend?: ((payload: TouchEvent) => void) | undefined;
  onTouchmove?: ((payload: TouchEvent) => void) | undefined;
  onTouchstart?: ((payload: TouchEvent) => void) | undefined;
  onAuxclick?: ((payload: PointerEvent) => void) | undefined;
  onClick?: ((payload: PointerEvent) => void) | undefined;
  onContextmenu?: ((payload: PointerEvent) => void) | undefined;
  onGotpointercapture?: ((payload: PointerEvent) => void) | undefined;
  onLostpointercapture?: ((payload: PointerEvent) => void) | undefined;
  onPointerdown?: ((payload: PointerEvent) => void) | undefined;
  onPointermove?: ((payload: PointerEvent) => void) | undefined;
  onPointerup?: ((payload: PointerEvent) => void) | undefined;
  onPointercancel?: ((payload: PointerEvent) => void) | undefined;
  onPointerenter?: ((payload: PointerEvent) => void) | undefined;
  onPointerleave?: ((payload: PointerEvent) => void) | undefined;
  onPointerover?: ((payload: PointerEvent) => void) | undefined;
  onPointerout?: ((payload: PointerEvent) => void) | undefined;
  onBeforetoggle?: ((payload: ToggleEvent) => void) | undefined;
  onToggle?: ((payload: ToggleEvent) => void) | undefined;
  onWheel?: ((payload: WheelEvent) => void) | undefined;
  onAnimationcancel?: ((payload: AnimationEvent) => void) | undefined;
  onAnimationstart?: ((payload: AnimationEvent) => void) | undefined;
  onAnimationend?: ((payload: AnimationEvent) => void) | undefined;
  onAnimationiteration?: ((payload: AnimationEvent) => void) | undefined;
  onSecuritypolicyviolation?: ((payload: SecurityPolicyViolationEvent) => void) | undefined;
  onTransitioncancel?: ((payload: TransitionEvent) => void) | undefined;
  onTransitionend?: ((payload: TransitionEvent) => void) | undefined;
  onTransitionrun?: ((payload: TransitionEvent) => void) | undefined;
  onTransitionstart?: ((payload: TransitionEvent) => void) | undefined;
  key?: PropertyKey | undefined;
  ref?: vue.VNodeRef | undefined;
  ref_for?: boolean | undefined | undefined;
  ref_key?: string | undefined | undefined;
  onVnodeBeforeMount?: (((vnode: vue.VNode) => void) | ((vnode: vue.VNode) => void)[]) | undefined;
  onVnodeMounted?: (((vnode: vue.VNode) => void) | ((vnode: vue.VNode) => void)[]) | undefined;
  onVnodeBeforeUpdate?: (((vnode: vue.VNode, oldVNode: vue.VNode) => void) | ((vnode: vue.VNode, oldVNode: vue.VNode) => void)[]) | undefined;
  onVnodeUpdated?: (((vnode: vue.VNode, oldVNode: vue.VNode) => void) | ((vnode: vue.VNode, oldVNode: vue.VNode) => void)[]) | undefined;
  onVnodeBeforeUnmount?: (((vnode: vue.VNode) => void) | ((vnode: vue.VNode) => void)[]) | undefined;
  onVnodeUnmounted?: (((vnode: vue.VNode) => void) | ((vnode: vue.VNode) => void)[]) | undefined;
}> & Readonly<{}>, {}, {}, {}, {}, string, vue.ComponentProvideOptions, false, {}, any>;
declare const _default: typeof __VLS_export;
export { _default as App };
"
`;

exports[`tsc > vue-sfc w/ ts-macro w/ ts-compiler 1`] = `
"// main.d.ts
import * as vue from 'vue';
type __VLS_Props = {
  foo: string;
};
declare global {
  interface Window {
    foo: string;
  }
}
declare const __VLS_export: vue.DefineComponent<__VLS_Props, {}, {}, {}, {}, vue.ComponentOptionsMixin, vue.ComponentOptionsMixin, {}, string, vue.PublicProps, Readonly<__VLS_Props> & Readonly<{}>, {}, {}, {}, {}, string, vue.ComponentProvideOptions, false, {}, any>;
declare const _default: typeof __VLS_export;
declare function defineStyle(style: string): any;
export { _default as App, defineStyle };
"
`;
